--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,6 +76,9 @@ layout: default
                 catalog-container">
                 <div class="side-catalog">
                     <hr class="hidden-sm hidden-xs">
+                    <h5>
+                        <a class="catalog-toggle" href=" ">CATALOG</a>
+                    </h5>
                     <ul class="catalog-body"></ul>
                 </div>
             </div>
@@ -126,7 +129,6 @@ layout: default
     var disqus_shortname = "{{site.disqus_username}}";
     var disqus_identifier = "{{page.id}}";
     var disqus_url = "{{site.url}}{{page.url}}";
-
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
